--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~10.1.4",
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
+    "@types/d3": "^7.1.0",
     "bootstrap": "^5.1.3",
     "d3": "^7.2.1",
+    "d3-collection": "^1.0.7",
     "jquery": "^3.6.0",
     "ngx-color-picker": "^11.0.0",
     "rxjs": "~6.6.0",
@@ -31,7 +33,6 @@
     "@angular-devkit/build-angular": "~0.1001.4",
     "@angular/cli": "~10.1.4",
     "@angular/compiler-cli": "~10.1.4",
-    "@types/d3": "^7.1.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
