--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "d3-collection": "^1.0.7",
     "jquery": "^3.6.0",
     "ngx-color-picker": "^11.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
