--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@angular/platform-browser": "~10.1.4",
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@types/d3": "^7.1.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^4.5.0",
     "d3": "^7.2.1",
     "d3-collection": "^1.0.7",
     "jquery": "^3.6.0",
