--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.5.0",
     "d3": "^7.2.1",
     "d3-collection": "^1.0.7",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "ngx-color-picker": "^11.0.0",
     "popper.js": "^1.16.1",
